feat: support department